Fixing scrollbar for small screens in the profile page (#9047)
* Remove legacy code

* add crayons-card to index-comments

the deleted legacy code , is handled in crayons-card

* Revert change to home class

because it's used maaaaaaany times in the project , so it's better not modify it.

* OmarElKhatibCS/fixing issue #9016 , fixing scrollbar for small screens

--- a/app/assets/stylesheets/index-comments.scss
+++ b/app/assets/stylesheets/index-comments.scss
@@ -3,10 +3,6 @@
 .index-comments {
   text-align: left;
   padding-bottom: calc(0.6vw + 5px);
-  background: var(--card-bg);
-  border-radius: 3px;
-  @include themeable(border, theme-container-border, none);
-  @include themeable(box-shadow, theme-container-box-shadow, $bold-shadow);
   margin: auto;
   width: 100%;
   @media screen and (min-width: 950px) {
